refactor: 簡化body, query檢查以及使用方式
